# ClassADay1

./: README.md
src/: BestStrategyFactory.hpp  CMakeLists.txt  Client.hpp  Event.hpp  FileWriter.cpp  FileWriter.hpp  IWriteStrategy.hpp  IWriter.hpp  LazyFactory.hpp  LazyStrategy.hpp  MemWriter.hpp  NormalFactory.hpp  NormalStrategy.hpp  Observable.hpp  StrategyFactory.hpp  main.cpp
